--- a/HTML_Bai1/css/style.css
+++ b/HTML_Bai1/css/style.css
@@ -1,11 +1,28 @@
+
+@font-face {
+    font-family: 'Circular';
+    src: url('../font/Airbnb_Cereal-Medium.woff2') format('woff');
+ 
+}
+@font-face {
+    font-family: 'Circular';
+    src: url('../font/Airbnb_Cereal-Bold.woff2') format('woff');
+ 
+}
+@font-face {
+    font-family: 'Circular';
+    src: url('../font/Airbnb_Cereal-Book.woff2') format('woff');
+ 
+}
 *{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+    font-family: 'Circular';
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box
 }
 body{
-	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
-	font-size: 14px;
+/* 	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+ */	font-size: 14px;
 	color: #484848;
 }
 .clear{
@@ -61,13 +78,20 @@ body{
 	letter-spacing: 1px;
 	margin-bottom: 8px;
 }
-.input input, select{
+._input input, select{
 	width: 100%;
 	padding: 11px;
-	font-weight: 600;
+	
 	border-radius: 4px;
 	border: 1px solid #f1f1f1;
 	line-height: 24px;
+}
+._input input{
+	font-weight: 600;
+	color: #484848
+}
+select{
+	text-align: center;
 }
 .select select{
 	padding: 16px 11px;
@@ -77,7 +101,7 @@ body{
 	float: left;
 }
 .right_col2{
-	margin-right: .5em;
+	padding-right: .5em;
 }
 .left_col2{
 	margin-left: .5em;
@@ -121,6 +145,7 @@ body{
 }
 .text_des{
 	padding: 7px 0;
+	font-size: 16px;
 
 }
 .col_3{
