--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 /* [Table of contents] 
-	1. Minxi 
-	2. Global 
- 	3. Responsive 
- 	-------------------------------------------------------------------*/
-display-flex, .search-form .form-content .form-group.form-group-1, .client-section .post-detail {
+  1. Minxi 
+  2. Global 
+  3. Responsive 
+  -------------------------------------------------------------------*/
+display-flex, .search-form .form-content .form-group.form-group-1, .client-section .post-detail, .travel-section .content .content-detail, .booked-section .content .content-detail {
   display: flex;
   display: -webkit-flex; }
 
@@ -24,7 +24,12 @@ body {
   margin: 0; }
 
 p {
+  margin-top: 0;
   margin-bottom: 0; }
+
+a {
+  text-decoration: none;
+  color: #484848; }
 
 input, select {
   width: 100%;
@@ -54,6 +59,11 @@ input, select {
   color: #484848;
   font-size: 16px;
   font-weight: 600; }
+
+h3 {
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 1.25em; }
 
 .container {
   max-width: 1080px;
@@ -192,9 +202,6 @@ input, select {
       width: 24px;
       fill: #FFB400; }
     .client-section .content .title h3 {
-      font-size: 24px;
-      font-weight: 800;
-      line-height: 1.25em;
       margin-bottom: 13px; }
     .client-section .content .title p {
       font-size: 16px;
@@ -251,4 +258,90 @@ input, select {
         line-height: 1.375em; }
 
 /*  End Client Section */
+/* Travel Section */
+.travel-section .content {
+  margin: 50px 9px 0; }
+  .travel-section .content .title h3 {
+    padding-bottom: 18px;
+    border-bottom: 1px solid #ebebeb; }
+  .travel-section .content .content-detail {
+    border-bottom: 1px solid #ebebeb;
+    padding-top: 8px;
+    padding-bottom: 30px; }
+    .travel-section .content .content-detail .content-inner {
+      width: 33.33%;
+      margin-right: 32px; }
+      .travel-section .content .content-detail .content-inner svg {
+        height: 40px;
+        width: 40px;
+        display: block;
+        fill: #60B6B5; }
+      .travel-section .content .content-detail .content-inner h4 {
+        font-size: 16px;
+        margin-top: 15px;
+        margin-bottom: 3px; }
+
+/* End Travel Section */
+/* Booked Section */
+.booked-section .content {
+  margin: 0 9px;
+  padding-top: 26px; }
+  .booked-section .content .title h3 {
+    margin-bottom: 18px; }
+  .booked-section .content .content-detail {
+    margin: 0 -8px; }
+  .booked-section .content .content-inner {
+    overflow: hidden;
+    margin: 0 8px; }
+    .booked-section .content .content-inner .icon {
+      padding-top: 4px; }
+      .booked-section .content .content-inner .icon span {
+        float: left;
+        margin-right: 1px;
+        font-weight: 600;
+        font-size: 12px; }
+      .booked-section .content .content-inner .icon .star {
+        margin-top: 3px; }
+        .booked-section .content .content-inner .icon .star a {
+          color: #008489;
+          font-size: 9px;
+          font-weight: normal; }
+      .booked-section .content .content-inner .icon .number {
+        margin-left: 3px; }
+      .booked-section .content .content-inner .icon svg {
+        height: 1em;
+        width: 1em;
+        display: block;
+        fill: currentColor; }
+    .booked-section .content .content-inner .image img {
+      border-radius: 3px;
+      -moz-border-radius: 3px;
+      -webkit-border-radius: 3px;
+      -o-border-radius: 3px;
+      -ms-border-radius: 3px;
+      width: 100%; }
+    .booked-section .content .content-inner .locate {
+      padding-top: 3px; }
+      .booked-section .content .content-inner .locate a {
+        color: #767676;
+        font-size: 12px;
+        font-weight: 800; }
+    .booked-section .content .content-inner h4 {
+      font-size: 16px;
+      font-weight: 800;
+      margin: 1px 0; }
+  .booked-section .content .show-all {
+    font-size: 17px;
+    font-weight: 600;
+    margin-top: 17px; }
+    .booked-section .content .show-all a {
+      color: #008489; }
+      .booked-section .content .show-all a:hover {
+        text-decoration: underline; }
+    .booked-section .content .show-all svg {
+      height: 10px;
+      width: 10px;
+      fill: currentColor; }
+
+/* End Booked Section */
 /* 3. Responsive  ------------------------------------------------------------ */
