--- a/Bai tap 1 CSS/css/1.css
+++ b/Bai tap 1 CSS/css/1.css
@@ -3,7 +3,7 @@ html{
     font-size: 16px;
 }
 @font-face {
-font-family:circularmedium;
+font-family:circular;
 src:url('../fonts/Circularmedium.woff') format('woff');
 font-weight:normal;
  font-style:normal;
@@ -11,7 +11,7 @@ font-weight:normal;
 @font-face {
 font-family:circularbold;
 src:url('../fonts/Circularbold.woff') format('woff');
-font-weight:bold;
+font-weight:normal;
  font-style:normal;
 }
 @font-face {
@@ -98,6 +98,7 @@ p {
 
 p.p-title {
     margin-bottom: 26px;
+    font-family: circularbook;
 }
 .row {
   display: flex;
@@ -209,6 +210,7 @@ img.card-img-top {
 .reviews p.card-text {
     font-size: 14px;
     margin-top: 6px;
+    font-family: circularbook;
 }
 
 .reviewer img {
@@ -268,6 +270,10 @@ a{
     font-size: 16px;
 }
 
+.reviewer span {
+    font-family: circularbook;
+}
+
 .card-body {
     padding: 10px;
     padding-right: 20px;
@@ -293,6 +299,10 @@ a{
     border-color: #EBEBEB;
     height: 48px;
     /* font-family: circularbold; */
+}
+
+input#datepicker1:focus,input#datepicker2:focus {
+    border: 1px solid grey;
 }
 
 .form-find input {
