--- a/css/day1.css
+++ b/css/day1.css
@@ -3,26 +3,27 @@
 	padding: 0;
 
 }
-.body{
+.part1{
 	width: 100%;
 	height: 700px;
 	background-image: url('../image/bg3.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	padding: 5% 0;
+	/* margin-bottom: 20px; */
+	padding-bottom: 20px;
 }
 .form{
 	width: 38%;
     height: 550px;
     background: rgba(255, 255, 255, 0.7);
-    margin-left: 12%;
+    margin-left: 10%;
+    
 }
 form{
 	padding: 10% 5%;
 }
-.footer{
-	padding: 5% 12%;	
-}
+
 li{
 	list-style: none;
 	color: #767676;
@@ -35,9 +36,121 @@ i{
 	color: #767676;
 	cursor: pointer;
 }
-span{
+.footer{
+	margin: 0 auto;
+	width: 80%;
+	padding-top: 40px;
+}
+.footer span{
 	background-color: #006a70;
 	border-radius: 4px;
 	padding: 0px 4px 2px 4px;
 	color: white;
+}
+.part {
+	padding: 2% 0;
+	margin: 0 auto;
+	width: 80%;
+}
+.title1{
+	position: relative;
+}
+.icon1{
+	position: absolute;
+	top: -4px;
+}
+.para{
+	padding-left: 35px;
+}
+.part2 .p2_content{
+	margin-top: 30px;
+}
+.star{
+	padding: 1.25rem 0;
+}
+.star i{
+	color: #008489;
+}
+
+.image_comment img{
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	border: none;
+}
+.image_p2{
+	cursor: pointer;
+}
+.row .col9{
+	padding: 0;
+}
+.col9 p{
+	margin-bottom: 0;
+}
+.name{
+	font-weight: bold;
+	text-transform: uppercase;
+}
+h2{
+	font-weight: bold;
+}
+.box_p3 h5{
+	margin-bottom: 20px;
+}
+.box_p3 i{
+	color: #008489;
+	font-size: 50px;
+}
+.part3 .row{
+	padding: 20px 0;
+}
+.card1 .card-body{
+	padding: 1.25rem 0;
+}
+.card1 .text-muted{
+	text-transform: uppercase;
+	font-size: 12px;
+}
+.card1 h5{
+	font-size: 17px;
+	margin-top: 4px;
+}
+.card1 .card-subtitle span{
+	text-decoration: underline;
+}
+.rate_p4{
+	font-size: 11px;
+}
+.rate_p4 i{
+	color: #008489;
+}
+.card1 a{
+	list-style: none;
+	color: black;
+}
+.card1 a:hover{
+	list-style: none;
+	color: black;
+	text-decoration: none;
+}
+.show{
+	color: #008489;
+	font-weight: bold;
+	font-size: 18px;
+}
+.show:hover{
+	color: #008489;
+}
+.btn_add{
+	background: #008489;
+	color: white;
+	font-weight: bold;
+	padding: 8px 3px;
+}
+.footer2{
+	margin: 0 auto;
+	width: 80%;
+	padding-top: 6px;
+	padding-bottom: 20px;
+	color: gray;
 }
