--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
   2. Global 
   3. Responsive 
   -------------------------------------------------------------------*/
-display-flex, .search-form .form-content .form-group.form-group-1, .client-section .post-detail, .travel-section .content .content-detail, .booked-section .content .content-detail {
+display-flex, .search-form .form-content .form-group.form-group-1, .client-section .post-detail, .travel-section .content .content-detail, .booked-section .content .content-detail, .footer-section .sub-footer, .footer-section .footer-content {
   display: flex;
   display: -webkit-flex; }
 
@@ -298,7 +298,7 @@ h3 {
       .booked-section .content .content-inner .icon span {
         float: left;
         margin-right: 1px;
-        font-weight: 600;
+        font-weight: 500;
         font-size: 12px; }
       .booked-section .content .content-inner .icon .star {
         margin-top: 3px; }
@@ -332,7 +332,7 @@ h3 {
       margin: 1px 0; }
   .booked-section .content .show-all {
     font-size: 17px;
-    font-weight: 600;
+    font-weight: 500;
     margin-top: 17px; }
     .booked-section .content .show-all a {
       color: #008489; }
@@ -342,6 +342,96 @@ h3 {
       height: 10px;
       width: 10px;
       fill: currentColor; }
+  .booked-section .content .add-dates {
+    padding-top: 29px;
+    padding-bottom: 65px; }
+    .booked-section .content .add-dates h3 {
+      margin-bottom: 2px; }
+    .booked-section .content .add-dates p {
+      font-size: 16px; }
+    .booked-section .content .add-dates .btn {
+      color: #fff;
+      background: #008489;
+      border-radius: 4px;
+      -moz-border-radius: 4px;
+      -webkit-border-radius: 4px;
+      -o-border-radius: 4px;
+      -ms-border-radius: 4px;
+      font-size: 16px;
+      font-weight: 800;
+      cursor: pointer;
+      margin-top: 16px;
+      display: inline-block;
+      padding: 13.5px 24px;
+      text-align: center;
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      -webkit-box-sizing: border-box;
+      -o-box-sizing: border-box;
+      -ms-box-sizing: border-box; }
 
 /* End Booked Section */
+/* Footer */
+.footer-section {
+  margin-bottom: 48px; }
+  .footer-section .line {
+    border: 1px solid #ebebeb; }
+  .footer-section .content {
+    margin: 0 9px; }
+  .footer-section .sub-footer {
+    padding-top: 17px;
+    border-top: 1px solid #ebebeb;
+    align-items: center;
+    -moz-align-items: center;
+    -webkit-align-items: center;
+    -o-align-items: center;
+    -ms-align-items: center; }
+    .footer-section .sub-footer svg {
+      height: 1.5em;
+      width: 1.5em;
+      display: inline-block;
+      fill: #767676; }
+    .footer-section .sub-footer span {
+      font-weight: 500;
+      color: #767676; }
+  .footer-section .footer-content {
+    padding-bottom: 4px; }
+    .footer-section .footer-content .footer-item {
+      padding-top: 44px;
+      width: 25%; }
+      .footer-section .footer-content .footer-item .icon-socials {
+        padding-top: 23px; }
+        .footer-section .footer-content .footer-item .icon-socials span {
+          padding: 0 5px; }
+        .footer-section .footer-content .footer-item .icon-socials svg {
+          height: 18px;
+          width: 18px;
+          display: inline-block;
+          fill: #767676; }
+      .footer-section .footer-content .footer-item h4 {
+        margin-bottom: 14px; }
+      .footer-section .footer-content .footer-item ul {
+        list-style-type: none;
+        padding-left: 0; }
+        .footer-section .footer-content .footer-item ul li {
+          padding-bottom: 2px; }
+          .footer-section .footer-content .footer-item ul li a {
+            color: #767676;
+            font-weight: 500; }
+            .footer-section .footer-content .footer-item ul li a:hover {
+              text-decoration: underline; }
+          .footer-section .footer-content .footer-item ul li span {
+            color: #fff;
+            font-size: 12px;
+            font-weight: 600;
+            background: #006a70;
+            padding: 1px 5px;
+            margin-left: 5px;
+            border-radius: 4px;
+            -moz-border-radius: 4px;
+            -webkit-border-radius: 4px;
+            -o-border-radius: 4px;
+            -ms-border-radius: 4px; }
+
+/* End Footer */
 /* 3. Responsive  ------------------------------------------------------------ */
