--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,183 @@
+body{
+	font-family:Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif;
+}
+h2{
+	font-size: 30px;
+	color: #484848;
+}
+.discover{
+	color: #484848;
+	font-size: 20px;
+	display: block;
+	margin-bottom: 25px;
+}
 section{
-	background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/dd3f1937594867.5745a6785be0c.png");
+	height: 700px;
+	background-image: url("https://a0.muscache.com/4ea/air/r:w775-h300-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg");
+	background-size: 100% 700px;
+	background-repeat: no-repeat;
+	position: relative;
+}
+.headthum{
+	margin:20px;
+	width: 30px;
 }
 .header{
-	
-	width: 500px;
+	padding: 0px 30px 30px 30px;
+	margin-left: 240px;
+	background-color:#ffffff;
+	width: 444px;
 	height: auto;
-	padding: 30px;
+	border-radius: 5px;
+	position: absolute;
 }
-.option, .checking {
-	margin: 10px;
+section input{
+  width: 100%;
+  border-radius: 4px;
+}
+section div span{
+	font-weight: bold;
+	font-size: 14px;
+	color: #484848;
+	cursor: pointer;
+}
+hr{
+	border-bottom: none;
+	color: #484848;}
+
+footer{
+margin: 0px 240px 0px 240px;
+}
+footer div{
 	display: inline-block;
+	color: #484848;
+}
+
+input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin-bottom: 8px;
+  box-sizing: border-box;
+  border: solid 1px #484848;
+  font-size: 16px !important;
+  margin-top: 8px;
+  margin-bottom: 20px;
+}
+
+input[type=date] {
+  width: 100%;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: solid 1px #484848;
+  font-size: 16px !important;
+  margin-top: 8px;
+  margin-bottom: 20px;
+  
+}
+section .checking{
+	margin-left: 0px;
+	width: 214px;
+	display: inline-block;
+}
+section .option{
+	display: inline-block;
+	width: 214px;
+}
+section select{
+	margin-top: 8px;
+	margin-bottom: 8px;
+	width: 100%;
+	padding: 12px 20px;
+	box-sizing: border-box;
+	border: solid 1px #484848;
+	font-size: 16px !important;
+	border-radius: 4px;
+
+}
+section .children{
+	float: right;
+}
+
+input[type=submit] {
+	border: none;
+	width: 100%;
+	padding: 12px 20px;
+	margin-top: 20px;
+	color: #FFFFFF;
+	font-weight: bold;
+	font-size: 14px !important;
+	background-color: #FF5A5F;
+	cursor: pointer;
+}
+
+/*content */
+.content{
+	margin: 0px 240px 0px 240px;
+}
+.content span{
+	font-weight: bold;
+}
+
+.content .content1 img{
+	width: 100%;
+}
+
+.content .content1{
+	display: inline-block;
+	width: 32%;
+}
+.title1{
+	margin-top: 40px;
+	margin-bottom: 10px;
+	font-size: 24px !important;
+    font-weight: bold;
+    line-height: 1.25em !important;
+    color: #484848 !important;
+}
+.title2{
+	margin-top: 10px;
+	margin-bottom: 30px;
+	font-size: 16px !important;
+    font-weight: 400 !important;
+    line-height: 1.375em !important;
+    color: #484848 !important;
+}
+.content .content1 .vote{
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+.content .content1 .vote img{
+	display: inline-block;
+	width: 20px;
+	margin: 3px;
+}
+.content .content1 .info {
+	width: 100%;
+	margin: 5px;
+}
+.content .content1 .info img{
+	width: 50px;
+	border-radius: 50%;
+	display: block;
+}
+.content .content1 .commemt{
+	margin-bottom: 15px;
+	max-height: 54px;
+	overflow: hidden;
+}
+.content .content1 .info .name{
+	font-size: 16px !important;
+    font-weight: 600 !important;
+    line-height: 1.375em !important;
+    color: #484848 !important;
+}
+.content .content1 .info .nation{
+    font-size: 14px !important;
+    font-weight: 400 !important;
+    line-height: 1.2857142857142858em !important;
+    color: #484848 !important;
+}
+.content .content1 .info .avatar,.location{
+	display: inline-block;
+	margin-right: 20px;
 }
