--- a/CSS/airbnb.css
+++ b/CSS/airbnb.css
@@ -24,7 +24,20 @@
     font-weight: normal;
     font-style: normal;
 } 
-
+.p_content{
+    width: 302px;
+}
+h3{
+    font-size: 16px;
+    font-weight: 800;
+    color: #484848 !important;
+}
+a{
+    text-decoration: none;
+}
+li{
+    list-style: none;
+}
 body{
     font-family: Circular_book;
 }
@@ -156,6 +169,7 @@ section{
 section .unis h2{
     color: #484848fc;
     font-size: 24px;
+    font-family: Circular_bold;
 }
 section .unis .star1{
     display: flex;
@@ -165,7 +179,7 @@ section .unis .star1 p{
     margin: 4px 0 0 10px;
 }
 section .unis .star1 p>span{
-    font-weight: bold;
+    font-family: Circular_bold;
 }
 section .unis .evaluate{
     width: 100%;
@@ -173,7 +187,7 @@ section .unis .evaluate{
 }
 section .unis .evaluate1{
     width: 332px;
-    height: 410px;
+    height: auto;
     margin-top: 27px;
     
 }
@@ -215,3 +229,213 @@ section .unis .evaluate1 .profile #p_profile{
 section .unis .eva_margin{
     margin: 27px 17px 0 17px;
 }
+
+/*  END UNIS  */
+section .voyager{
+    margin-top: 60px;
+    padding-bottom: 38px;
+    border-bottom: 1px solid #ebebeb;
+}
+section .voyager h2{
+    font-size: 24px;
+    font-weight: 800;
+    padding-bottom: 18px;
+    border-bottom: 1px solid #ebebeb;
+    font-family: Circular_bold;
+}
+section .voyager svg{
+    margin-top: 32px;
+}
+section .voyager .items{
+    display: flex;
+}
+section .voyager .items .items_1{
+    width: 332px;
+}
+section .voyager .items .items_1 h3{
+    margin-top: 24px;
+    font-size: 16px;
+    font-weight: 800;
+}
+section .voyager .items .items_1 p{
+    margin-top: 12px;
+    line-height:  1.2857142857142858em;
+    font-size: 14px;
+    font-weight: 400;
+}
+section .voyager .items .item_margin{
+    margin: 0 18px 0 17px;
+}
+
+
+/* END VOYAGER */
+
+/* START REVERSE */
+
+section .reserve{
+    margin-top: 50px;
+}
+section .reserve .home_items{
+    margin-top: 25px;
+    display: flex;
+}
+section .reserve .home_item{
+    width: 247px;
+}
+section .reserve .home_item img{
+    width: 100%;
+    border-radius: 4px;
+    margin-bottom: 12px;
+}
+section .reserve .home_item h3{
+    margin-top: 10px;
+}
+section .reserve .home_item span{
+    color: #484848 ;
+    font-size: 12px;
+    font-weight: 800;
+    margin-top: 12px;
+}
+section .reserve .home_item p{
+    margin-top: 10px;
+    font-size: 14px;
+    font-weight: 400 ;
+    color: #484848;
+}
+section .reserve .home_item .star_small{
+    margin-top: 0px;
+    display: flex;
+}
+section .reserve .home_item .star_small i{
+    font-size: 8px;
+    color: #008489;
+}
+section .reserve .home_item .star_small span{
+    margin-top: 6px;
+    margin-left: 5px;
+}
+section .reserve .home_items .home_item_margin{
+    margin: 0 17px 0 17px;
+}
+section .reserve .home_items .home_item_margin1{
+    margin: 0 17px 0 0;
+}
+section .reserve .the_a{
+    margin-top: 25px;
+}
+section .reserve .the_a a{
+    color: #008489;
+    font-size: 17px;
+    font-weight: 400;
+    font-family: Circular_medium;
+}
+section .reserve .the_a a:hover{
+    text-decoration: underline;
+}
+section .reserve .the_a a i{
+    margin-left: 8px;
+    margin-top: 5px;
+}
+
+
+/* START QUAND */
+
+section .quand{
+    margin-top: 62px;
+    padding-bottom: 78px;
+}
+section .quand p{
+    margin-top: 6px;
+    margin-bottom: 30px;
+}
+section .quand a{
+    padding: 14px 24px;
+    font-size: 16px;
+    font-weight: 600;
+    margin-top: 23px;
+    background: #008489;
+    color: white;
+    border-radius: 4px;
+    font-family: Circular_bold;
+}
+
+/* END SECTION */
+
+/* START FOOTER */
+footer{
+    padding-top: 65px;
+    border-top: 1px solid #ebebeb;
+}
+footer .container{
+    padding-bottom: 15px;
+    border-bottom: 1px solid #ebebeb;
+}
+footer a{
+    color: #767676;
+}
+footer h4{
+    font-size: 14px;
+    font-weight: 800;
+    font-family: Circular_bold;
+}
+footer .airbnb{
+    width: 16.66%;
+}
+footer .airbnb ul{
+    margin-top: 16px;
+}
+footer .airbnb ul li{
+    margin-bottom: 1px;
+}
+footer .airbnb ul li span{
+    color: white;
+    font-size: 12px;
+    padding: 2px 5px;
+    margin-left: 7px;
+    background: #006a70;
+    border-radius: 3px;
+    font-family: Circular_medium;
+}
+footer .airbnb ul li a{
+    font-size: 14px;
+    font-weight: 400;
+    font-family: Circular_medium;
+}
+
+footer .airbnb ul li a:hover{
+    text-decoration: underline;
+}
+footer .container{
+    display: flex;
+}
+footer .mg{
+    margin: 0 90px;
+}
+footer .mg1{
+    margin-right: 100px;
+}
+footer .icons .icon{
+    display: flex;
+}
+footer .icons .icon svg{
+    margin: 0 6px;
+}
+
+footer .end{
+    display: flex;
+    margin-top: 18px;
+    padding-bottom: 25px;
+}
+footer .end svg{
+    width: 1.2em;
+    height: 1.2em;
+}
+footer .end span{
+    font-size: 14px;
+    font-family: Circular_medium;
+    color: #767676;
+    margin-left: 10px;
+    margin-top: 2px;
+}
+
+
