--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,34 @@
-*{
+ @font-face {
+     font-family: 'Circular'; 
+    /* font-family: 'Circular-bold';  */
+    src: url('../fonts/Airbnb_Cereal-Bold.woff2') format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+     font-family: 'Circular-bold'; 
+    src: url('../fonts/Airbnb_Cereal-Book.woff2') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Circular';
+    src: url('../fonts/Airbnb_Cereal-Medium.woff2') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+ *{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: 'Circular';
+
 }
-.body {
-    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+body {
     font-size: 14px;
-    line-height: 1.43;
+    line-height: 1.43em;
     color: #484848;
     background-color: #fff;
     -webkit-font-smoothing: antialiased;
@@ -17,36 +39,51 @@
 .container{
 	max-width: 1080px;
 	margin: 0 auto;
+	padding-left: 24px;
+	padding-right: 24px;
+    padding-top: 24px; 
+	padding-bottom: 24px;
+}
+a{
+	text-decoration: none;
+}
+.item-footer ul li{
+	list-style: none;
+	color: #484848;
+    margin-bottom: 4px!important;
 }
 header{
 	width: 100%;
-	/*background-image: url(../img/header.jpg);*/
-	/*max-height: 100%;*/
+}
+a.a-svg-header {
+    position: absolute;
+    top: 0;
+    padding: 16px 24px;
+    font-size: 32px;
+    line-height: 18px;
 }
 img.img-header{
 	width: 100%;
 	position: relative;
 }
-.frm-search{
-	
+/*************section .frm-Search*********/
+.content-header {
+    position: relative;
+    bottom: 76px;
+    width: 50%;
 }
-#fr-search{
-	/*width: 50%;
-	/*float: left;*/
-	position: absolute;
-	margin-top: 0;
-	margin-bottom: 0;
-	bottom: 20px;
-	padding: 32px;
-	background: #fff;
-	/*height: 561px;*/
-	/* margin-top: 16px;
-	margin-bottom: 16px; */
+#fr-search {
+    position: absolute;
+    margin-top: 0;
+    margin-bottom: 0;
+    bottom: 20px;
+    padding: 32px;
+    background: #fff;
 }
 h2.h2-title{
-	line-height: 36px;
-	font-size: 32px;
-	font-weight: 700;
+	line-height: 36px !important;
+	font-size: 32px !important;
+	font-weight: 700 !important;
 }
 .p-frmSearch{
 	font-size: 18px;
@@ -65,11 +102,6 @@ label{
 	letter-spacing: 1px;
 	text-transform: uppercase;
 }
-#group-where{}
-/*.datetime{
-	width: 40%;
-	float: left;
-}*/
 .datetime.check-in {
     width: 48%;
     float: left;
@@ -78,23 +110,35 @@ label{
     float: right;
     width: 48%;
 }
-/* .check{
-	width:10%;
-	margin-left: 10px;
-	margin-bottom: 10px;
-} */
 input {
     padding: 11px;
-    width: 100%;/* 
-    border-radius: 4px; */
+    width: 100%;
     outline: none;
     margin-bottom: 8px;
+    border-radius: 4px;
+    border: 1px solid #d3d3d3;
+    margin-top: 8px;
 }
 input::placeholder{
 	color: #484848;
 	font-weight: 600;
 	line-height: 27px;
 
+}
+input#checkIn::placeholder,input#checkOut:placeholder{
+    color: #484848!important;
+    font-weight: 600!important;
+    font-size: 16px!important;
+}
+input#checkIn:hover, input#checkOut:hover{
+    border: 1px solid #008489;
+} 
+.ui-datepicker-header.ui-widget-header.ui-helper-clearfix.ui-corner-all {
+    background-color: #ffff;
+    border: none;
+}
+.ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next{
+    border: 1px solid #d3d3d3;
 }
 .guestpicker{
 	width: 50%;
@@ -112,15 +156,14 @@ input#btnSearch {
     color: #fff;
     border: none;
 }
-/*input#btnSearch::focus{
-	border:none;
-	outline:none;
-}*/
-
 select{
 	padding: 11px 40px 11px 11px;
 	line-height: 24px;
 	width: 100%;
+    margin-top: 8px;
+    border-radius: 4px;
+    border: 1px solid #d3d3d3;
+
 }
 .guestpicker.adult {
     width: 48%;
@@ -129,4 +172,289 @@ select{
 .guestpicker.children {
     width: 48%;
     float: right;
+}
+/***************Section #customerReviews**********/
+section{
+	width: 100%;
+}
+.h2-question, .h2-traveling, .h2-justBooked {
+	font-weight: 800;
+	font-size: 24px;
+	line-height: 30px;
+	padding: 2px 0px;
+	color: #484848;
+}
+
+span.icon-start {
+    color: #008489;
+    height: 16px;
+    width: 16px;
+    margin-right: 6px;
+    font-size: 16px;
+}
+.ranking{
+    line-height: 22px;
+	color: #484848 !important;
+	margin-top: 8px;
+}
+span.span-color{
+	font-weight: 700;
+}
+.listing-card {
+    width: 100%;
+    margin-top: 24px;
+}
+.item-card {
+    width: calc(100%+16px);
+    display: flex;
+    margin-left: -8px;
+    margin-right: -8px;
+}
+.item-card .content-card {
+    width: 33.33%;
+    float: left;
+    margin-left: 8px;
+    margin-right: 8px;
+    color: #484848;
+}
+.item-card .content-card img {
+    width: 100%;
+    border-radius: 3px;
+}
+.content-card .start .item-start li{
+	display: inline-block;
+	list-style: none;
+}
+.content-p {
+    margin-top: 8px;
+    margin-bottom: 16px;
+    max-height: 54px;
+    margin-right: 32px;
+    line-height: 18px;
+    font-size: 14px;
+    font-weight: 400;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.customer {
+    width: 100%;
+    line-height: 18px;
+    font-size: 14px;
+    display: flex;
+}
+.img-customer {
+    height: 48px;
+    width: 48px;
+}
+.img-customer img {
+    max-width: 100%;
+    border-radius: 50% !important;
+    height: 100%;
+}
+.info-customer{
+	width: 80%;
+	margin-left: 16px;
+}
+span.name {
+    font-size: 16px;
+    font-weight: 600;
+    color: #484848;
+    line-height: 22px;
+}
+hr{
+	border-top: none;
+}
+
+/************Section #traveling****************/
+.service-traveling{
+	width: 100%;
+}
+.h2-traveling{
+	margin-bottom:16px;
+}
+.content-service{
+    width: calc(100%+20px);
+    display: flex;
+    margin-left: -10px;
+    margin-right: -10px;
+    margin-top: 32px;
+    margin-bottom: 32px;
+ }
+.item-service{
+	width: 33.33%;
+	margin-left: 10px;
+    margin-right: 10px;
+}
+.title-service {
+	font-size: 16px !important;
+    font-weight: 800 !important;
+    line-height: 22px;
+}
+.p-service{
+	line-height: 18px;
+	margin-top:4px;
+    font-size: 14px !important;
+    font-weight: 400 !important;
+}
+/***********section #justBooked**************/
+#justBooked .container>h2.h2-justBooked {
+    margin-bottom: 16px;
+}
+.content-booked{
+	width: 100%;
+	display: flex;
+}
+.booked {
+    width: calc(100%+16px);
+    display: flex;
+    margin-left: -8px;
+    margin-right: -8px;
+}
+.item-book img {
+    width: 100%;
+    border-radius: 3px;
+}
+.item-book {
+    width: 25%;
+    margin-left: 8px;
+    margin-right: 8px;
+}
+.information-house{
+	width: 100%;
+	padding-top: 8px;
+}
+span.title-house{
+	text-transform: uppercase;
+	font-weight: 800;
+	line-height: 16px;
+	font-size: 12px;
+	width: 100%;
+	color: #484848;
+}
+/* span{
+	width: 100%;
+} */
+.justbook{
+	margin-bottom: 2px;
+	line-height: 18px;
+}
+.information-house >a>p.justbook.infohouse {
+    padding-top: 4px;
+    font-size: 16px !important;
+    font-weight: 800 !important;
+    color: #484848 !important;
+    line-height: 22px;
+}
+.price{
+	line-height: 14px !important;
+	color: #484848 !important;
+    color: #484848;
+}
+.information-house p.small-start {
+    line-height: 21px;
+}
+.small-start span.item-icon-start {
+    font-size: 9px;
+    line-height: 21px;
+    margin-right: 2px;
+    color: #008489;
+}
+.storage{
+    font-size: 12px;
+    line-height: 16px;
+    color: #484848;
+}
+.btnShowAll{
+	font-size: 14px; 
+	line-height: 18px;
+/* 	margin: 0px 134px; */
+	/* padding: 48px 24px; */
+}
+.btnShowAll .linkShowAll a, .btnShowAll .icon-right a{
+	font-size: 17px;
+	font-weight: 600;
+	line-height: 22px;
+	margin: 0px 6px 0px 0px;
+	text-align: left;
+    color: #008489;
+}
+.btnShowAll .linkShowAll a:hover{
+    text-decoration: underline;
+}
+/*************section traveling************/
+.buttonAddDate{
+	margin-top: 16px;
+	margin-bottom: 24px;
+}
+button#addDate {
+    box-shadow: var(--shadow-button-level0-box-shadow, none) !important;
+    border-color: var(--color-buttons-default-border, transparent) !important;
+    color: var(--color-buttons-default-text, #ffffff) !important;
+    background: #008489;
+    text-transform: var(--font-button-text-transform, undefined) !important;
+    border: none;
+    padding: 10px 22px;
+    border-radius: 4px;
+    font-size: 16px;
+    line-height: 24px!important;
+    font-weight: 800;
+}
+/**************footer top*************/
+#footer{
+	font-size: 14px;
+	line-height: 18px;
+}
+.border-hr{
+	margin-top: 16px;
+	margin-bottom: 16px;
+}
+
+.footer-top {
+    width: calc(100%+20px);
+    margin-left: -10px;
+    margin-right: -10px;
+    display: flex;
+}
+.item-footer {
+    width: 25%;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.item-footer ul.info-Airbnb{
+	margin-top: 16px;
+}
+
+.item-footer ul.info-Airbnb li a{
+	color: #484848;
+}
+.item-footer .socialNetwork li a{
+	color: #484848;
+}
+ul.socialNetwork li {
+    display: inline-block;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+.item-footer .socialNetwork>li>a>i{
+	font-size: 14px;
+	font-weight: 600;
+	line-height: 18px;
+}
+.reservedly{
+	width: 100%;
+	display: flex;
+}
+.item-svg {
+    width: 3%;
+}
+.item-buttom{
+	width: 97%;
+}
+label.new {
+    margin-left: 8px;
+    text-transform: capitalize;
+    background: #006a70 !important;
+    color: #fff;
+    padding: 0 4px!important;
+    border-radius: 4px!important;
 }
