--- a/Bai tap 2 CSS/css/1.css
+++ b/Bai tap 2 CSS/css/1.css
@@ -9,7 +9,6 @@
   box-sizing: border-box;
 }
 .container {
-  width: 100%;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -24,18 +23,20 @@
 }
 .col{
     position: relative;
-    width: 100%;
+    max-width: 100%;
     min-height: 1px;
     padding-right: 15px;
     padding-left: 15px;
+    flex-basis: 100%;
+    flex-grow: 0;
 }
 
 .col a{
     position: relative;
     height: 0;
     padding-top: 66.66%;
-    display: inline-block;
-    width: 100%;
+    display: block;
+    max-width: 100%;
 }
 .col a img{
     position: absolute;
@@ -51,11 +52,13 @@
 }
 @media (min-width: 768px){
     .col{
-        width: 50%;
+        flex-basis: 50%;
+        max-width: 50%;
     }
 }
 @media (min-width: 1025px){
     .col{
-        width: 25%;
+        flex-basis: 25%;
+        max-width: 25%;
     }
 }
