--- a/Grid_BT3/CSS/grid.css
+++ b/Grid_BT3/CSS/grid.css
@@ -4,7 +4,7 @@
 }
 .grid-container{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto;
 }
 .grid-container .grid-item{
     padding: 20px;
