--- a/css/main1.css
+++ b/css/main1.css
@@ -1,7 +1,7 @@
 .header{
-	background-image:url("https://media.laodong.vn/storage/newsportal/Uploaded/ctvkhampha/2016_09_25/an9_TDCP.jpg?w=888&h=592&crop=auto&scale=both");
+	background-image:url("https://f71lt0q191r215mt-zippykid.netdna-ssl.com/wp-content/uploads/2018/09/page-title.jpg");
     width: 100%;
-    height: 20%;
+    height: 100%;
     
 }
 .header p{
