--- a/Bootstrap/CSS/bs4.css
+++ b/Bootstrap/CSS/bs4.css
@@ -21,8 +21,8 @@ body{
     font-size: 22px;
 }
 .mg{
-    position: relative;
     margin-top: 50px;
+    height: 30px;
 }
 .mg ul li a{
     position: relative;
