--- a/css/day4.css
+++ b/css/day4.css
@@ -48,6 +48,7 @@
 	.menu_bar{
 		margin: 0 auto;
 		width: 100%;
+		margin-bottom: 30px;
 	}
 }
 
@@ -59,9 +60,9 @@
 	.menu_bar li{
 		list-style: none;
 		float: left;
-		padding: 12px;
+		padding: 8px;
 		cursor: pointer;
-		font-size: 15px;
+		font-size: 13px;
 	}
 
 }
