--- a/Airbnb/css/main.css
+++ b/Airbnb/css/main.css
@@ -1,24 +1,28 @@
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-#logo {
+/* #logo {
     width: 80px;
     height: 64px;
     position: absolute;
     float: left;
-}
-#bgr {
+} */
+header{
+    background-image: url(https://a0.muscache.com/4ea/air/r:w775-h300-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg);
+    background-size:cover;
     width: 100%;
+    height: 650px;
+    vertical-align: middle !important;
     
 }
 .head{
     position: absolute;
     top: 80px;
-    left: 280px;
+    left: 100px;
     background-color: white;
     padding:32px;
     border-radius: 4px;
-    max-width: 444px;
+    width: 500px;
     
 
 }
@@ -115,10 +119,8 @@ form button{
     font-size: 14px;
     line-height: 18px;
 }
-.content{
-    width: 30%;
-    float: left;
-    margin: 10px;
+.col-md-4{
+    padding: 1em;
 }
 .thumbnail img{
     width: 333px;
@@ -128,12 +130,15 @@ form button{
     
 }
 .info img{
-    width: 25%;
-    height: 80px;;
+    width: 50px;
+    height: 50px;;
     font-size: 14px;
-    line-height: 18px;
+    line-height: 15px;
     border-radius: 50%;
-    bottom:10px;
+    
+}
+.thumbnail img{
+    padding-top: 56.25%
 }
 .name{
     width: 60%;
@@ -141,3 +146,47 @@ form button{
     margin-left: 10px;
 }
 
+@media only screen and (max-width: 1128px) {
+.container{
+    overflow: auto;
+    white-space: nowrap;
+}
+.col-md-4{
+        
+        display: inline-block;
+        text-align: center;
+        
+        text-decoration: none;
+}
+}
+@media only screen and (max-width: 744px) {
+    
+    .head{
+
+    width: 100%;
+    bottom: 0px;
+    left: 0px;
+    background: none;
+    padding: 0px;
+    height: 100%;
+    
+    
+    }
+    .head form{
+        background-color: white;
+        padding: 50px 32px;
+        margin-bottom: 0px;
+        height: 62%;
+        
+    }
+    .head h2{
+        color: white;
+        padding:20px;
+
+    }
+    .title p{
+        
+        visibility:hidden;
+    }
+    
+  }
