--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,14 @@ section{
 	padding: 2px 0px;
 	color: #484848;
 }
-
+.ranking{
+    line-height: 22px;
+    color: #484848 !important;
+    margin-top: 8px;
+}
+.text-card{
+    margin-top: 16px;
+}
 span.icon-start {
     color: #008489;
     height: 16px;
@@ -188,10 +195,8 @@ span.icon-start {
     margin-right: 6px;
     font-size: 16px;
 }
-.ranking{
-    line-height: 22px;
-	color: #484848 !important;
-	margin-top: 8px;
+.ranking span.span-start {
+    margin-right: 8px;
 }
 span.span-color{
 	font-weight: 700;
