--- a/Airbnb/css/main.css
+++ b/Airbnb/css/main.css
@@ -151,10 +151,10 @@ form button {
 }
 
 @media only screen and (min-width: 1128px) {
-  .container {
-    /* overflow: auto;
-    white-space: nowrap; */
-  }
+  /* .container {
+    overflow: auto;
+    white-space: nowrap;
+  } */
   .col-md {
     max-width: 100%;
     display: block;
